# DDRBBOT

./: .env.example  .gitignore  1  CLAUDE.md  README.md  copy.json  pyproject.toml
PLAN/: NAPCAT_PLAN.md  PLAN.md
artifacts/: ddrbbot.db  material_web_preview.db  rss_smoke.db  smoke.db  test_feed.xml
skills/: .env  doors_floor2_payload.json  doors_general_payload.json  doors_the_outdoors_discord_event.json  doors_the_outdoors_payload.json  forsaken_april_fools_payload.json  forsaken_april_fools_vertical_payload.json  forsaken_update_payload.json
skills/ddrbbot-api-content/: SKILL.md
skills/ddrbbot-api-content/agents/: openai.yaml
skills/ddrbbot-api-content/references/: endpoints.md
skills/ddrbbot-api-content/scripts/: ddrbbot_api.py
src/ddrbbot/: __init__.py  analyzer.py  config.py  copybook.py  database.py  delivery.py  delivery_worker.py  logging_setup.py  main.py  models.py  pipeline.py  presets.py  rendering.py  review_presenter.py  rss.py  rsshub.py  services.py  tui_logs.py  utils.py
src/ddrbbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ddrbbot/llm_agent/: __init__.py  agent.py  chat_service.py  context_builder.py  persona_store.py  provider_store.py  scheduler.py  tools.py
tests/: test_agent_operations.py  test_chat_experience.py  test_copybook.py  test_delivery_service.py  test_llm_agent.py  test_llm_analysis_output.py  test_napcat_adapter.py  test_qq_commands.py  test_rendering.py  test_review_panel.py  test_rsshub_and_sources.py
tests/__pycache__/: test_agent_operations.cpython-310.pyc.1539896597440
(+11 files in other folders)
